--- a/SocialNetworkDevSlo/Base.lproj/Main.storyboard
+++ b/SocialNetworkDevSlo/Base.lproj/Main.storyboard
@@ -1,14 +1,16 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11134" systemVersion="15F34" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11201" systemVersion="16A323" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11106"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11161"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
+        <!--Sign InVC-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="SignInVC" customModule="SocialNetworkDevSlo" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="y3c-jy-aDJ"/>
                         <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
@@ -16,11 +18,112 @@
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="u0t-aH-KZs">
+                                <subviews>
+                                    <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="devslopes-logo" translatesAutoresizingMaskIntoConstraints="NO" id="2IJ-RF-rH7"/>
+                                </subviews>
+                                <color key="backgroundColor" red="0.0" green="0.73725490196078436" blue="0.83137254901960778" alpha="1" colorSpace="calibratedRGB"/>
+                                <constraints>
+                                    <constraint firstItem="2IJ-RF-rH7" firstAttribute="centerX" secondItem="u0t-aH-KZs" secondAttribute="centerX" id="Nig-lo-K5i"/>
+                                    <constraint firstAttribute="height" constant="150" id="Nxo-4P-C0Y"/>
+                                    <constraint firstItem="2IJ-RF-rH7" firstAttribute="centerY" secondItem="u0t-aH-KZs" secondAttribute="centerY" id="pSo-2m-8Dv"/>
+                                </constraints>
+                            </view>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="NqD-eb-tfG">
+                                <subviews>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="If you haven't signed in before, an account will be automatically created for you." textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Z3u-qb-Wf8">
+                                        <fontDescription key="fontDescription" name="AvenirNext-Regular" family="Avenir Next" pointSize="15"/>
+                                        <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                </subviews>
+                                <color key="backgroundColor" red="0.0" green="0.51372549019607838" blue="0.5607843137254902" alpha="1" colorSpace="calibratedRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="trailing" secondItem="Z3u-qb-Wf8" secondAttribute="trailing" constant="8" id="0Uc-qe-eOe"/>
+                                    <constraint firstItem="Z3u-qb-Wf8" firstAttribute="top" secondItem="NqD-eb-tfG" secondAttribute="top" constant="8" id="any-Z0-mAr"/>
+                                    <constraint firstAttribute="bottom" secondItem="Z3u-qb-Wf8" secondAttribute="bottom" constant="8" id="iWF-k4-qh8"/>
+                                    <constraint firstItem="Z3u-qb-Wf8" firstAttribute="leading" secondItem="NqD-eb-tfG" secondAttribute="leading" constant="8" id="xUQ-3b-8mj"/>
+                                    <constraint firstAttribute="height" constant="75" id="yqe-4I-rcS"/>
+                                </constraints>
+                            </view>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Select a sign in method" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="NFT-w0-Jif">
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="20" id="cyM-RT-14H"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" name="AvenirNext-Regular" family="Avenir Next" pointSize="17"/>
+                                <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="0.87" colorSpace="calibratedRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Dju-hv-fcP">
+                                <color key="backgroundColor" red="0.25490196078431371" green="0.36078431372549019" blue="0.64313725490196072" alpha="1" colorSpace="calibratedRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="150" id="p63-o5-jcy"/>
+                                    <constraint firstAttribute="width" constant="150" id="vhM-hf-ZfE"/>
+                                </constraints>
+                                <state key="normal" image="f"/>
+                            </button>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="_______________________or_______________________" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="6mU-PW-xLF">
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="21" id="A4P-rs-g5q"/>
+                                    <constraint firstAttribute="width" constant="347" id="o6F-YQ-G6H"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="0.25" colorSpace="calibratedRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="15" translatesAutoresizingMaskIntoConstraints="NO" id="4bh-by-jLm">
+                                <subviews>
+                                    <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Email" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="nyk-b3-EDa">
+                                        <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="0.87" colorSpace="calibratedRGB"/>
+                                        <fontDescription key="fontDescription" name="AvenirNext-Regular" family="Avenir Next" pointSize="18"/>
+                                        <textInputTraits key="textInputTraits"/>
+                                    </textField>
+                                    <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Password" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="HuF-Ff-nQB">
+                                        <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="0.87" colorSpace="calibratedRGB"/>
+                                        <fontDescription key="fontDescription" name="AvenirNext-Regular" family="Avenir Next" pointSize="18"/>
+                                        <textInputTraits key="textInputTraits"/>
+                                    </textField>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="YfJ-le-QZa">
+                                        <color key="backgroundColor" red="0.8666666666666667" green="0.17254901960784313" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                        <fontDescription key="fontDescription" name="AvenirNext-Regular" family="Avenir Next" pointSize="25"/>
+                                        <state key="normal" title="Sign In">
+                                            <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                        </state>
+                                    </button>
+                                </subviews>
+                            </stackView>
+                        </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="u0t-aH-KZs" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="2HQ-zO-Ser"/>
+                            <constraint firstItem="NFT-w0-Jif" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" id="5fm-qH-mSV"/>
+                            <constraint firstItem="Dju-hv-fcP" firstAttribute="top" secondItem="NFT-w0-Jif" secondAttribute="bottom" constant="20" id="6Lx-P5-tgf"/>
+                            <constraint firstItem="4bh-by-jLm" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" constant="10" id="6wP-Ke-GzE"/>
+                            <constraint firstItem="NFT-w0-Jif" firstAttribute="top" secondItem="u0t-aH-KZs" secondAttribute="bottom" constant="20" id="AMa-zu-Rng"/>
+                            <constraint firstAttribute="trailing" secondItem="NqD-eb-tfG" secondAttribute="trailing" id="GoN-Wp-65C"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="4bh-by-jLm" secondAttribute="trailing" constant="10" id="JVA-7Q-60G"/>
+                            <constraint firstItem="NqD-eb-tfG" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="YnV-Fl-rZo"/>
+                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="NqD-eb-tfG" secondAttribute="bottom" id="b6Z-g0-vD2"/>
+                            <constraint firstItem="u0t-aH-KZs" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" id="dbR-Wt-sdO"/>
+                            <constraint firstItem="4bh-by-jLm" firstAttribute="top" secondItem="6mU-PW-xLF" secondAttribute="bottom" constant="27" id="en9-cw-6NS"/>
+                            <constraint firstItem="NFT-w0-Jif" firstAttribute="trailing" secondItem="8bC-Xf-vdC" secondAttribute="trailingMargin" id="iTQ-Rx-pMi"/>
+                            <constraint firstItem="6mU-PW-xLF" firstAttribute="top" secondItem="Dju-hv-fcP" secondAttribute="bottom" constant="8" id="kKe-2u-N8g"/>
+                            <constraint firstAttribute="trailing" secondItem="u0t-aH-KZs" secondAttribute="trailing" id="lsX-MC-GaA"/>
+                            <constraint firstItem="4bh-by-jLm" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="nss-If-3SB"/>
+                            <constraint firstAttribute="trailing" secondItem="6mU-PW-xLF" secondAttribute="trailing" constant="10" id="pXz-Gl-0gu"/>
+                            <constraint firstItem="Dju-hv-fcP" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="sFv-It-yuO"/>
+                            <constraint firstItem="6mU-PW-xLF" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" constant="10" id="yVd-Rr-OtN"/>
+                        </constraints>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="32.799999999999997" y="38.23088455772114"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="devslopes-logo" width="150" height="94"/>
+        <image name="f" width="352" height="328"/>
+    </resources>
 </document>
