--- a/SocialNetworkDevSlo/Base.lproj/Main.storyboard
+++ b/SocialNetworkDevSlo/Base.lproj/Main.storyboard
@@ -203,14 +203,14 @@
                                     <constraint firstItem="Mgx-Qf-N9I" firstAttribute="top" secondItem="zpb-7b-etO" secondAttribute="top" constant="8" id="sMj-6c-XhU"/>
                                 </constraints>
                             </view>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="367" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="3PM-kl-fVW">
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="none" allowsSelection="NO" rowHeight="367" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="3PM-kl-fVW">
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <prototypes>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="367" id="jHu-wS-YD0">
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="PostCell" rowHeight="367" id="jHu-wS-YD0" customClass="PostCell" customModule="SocialNetworkDevSlo" customModuleProvider="target">
                                         <rect key="frame" x="0.0" y="28" width="375" height="367"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="jHu-wS-YD0" id="oZo-tM-ZK5">
-                                            <frame key="frameInset" width="375" height="366"/>
+                                            <frame key="frameInset" width="375" height="367"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="5Dn-Wx-Bpw" customClass="FancyView" customModule="SocialNetworkDevSlo" customModuleProvider="target">
@@ -219,7 +219,7 @@
                                                             <subviews>
                                                                 <stackView opaque="NO" contentMode="scaleToFill" spacing="13" translatesAutoresizingMaskIntoConstraints="NO" id="e5C-sf-5ga">
                                                                     <subviews>
-                                                                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="profile" translatesAutoresizingMaskIntoConstraints="NO" id="iAP-Eg-cEv">
+                                                                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="profile" translatesAutoresizingMaskIntoConstraints="NO" id="iAP-Eg-cEv" customClass="CircleView" customModule="SocialNetworkDevSlo" customModuleProvider="target">
                                                                             <constraints>
                                                                                 <constraint firstAttribute="width" constant="60" id="A0Y-SE-64D"/>
                                                                                 <constraint firstAttribute="height" constant="60" id="m82-AN-ETG"/>
@@ -241,6 +241,9 @@
                                                                 <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="placeholder" translatesAutoresizingMaskIntoConstraints="NO" id="xkQ-3j-PyG"/>
                                                                 <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="Isd-1X-LRY">
                                                                     <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                                                    <constraints>
+                                                                        <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="50" id="hZc-ya-O5t"/>
+                                                                    </constraints>
                                                                     <string key="text">Lorem ipsum dolor sit er elit lamet, consectetaur cillium adipisicing pecu, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Nam liber te conscient to factor tum poen legum odioque civiuda.</string>
                                                                     <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                                     <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
@@ -256,7 +259,7 @@
                                                                 </label>
                                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="1239" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Vvg-Te-ujn">
                                                                     <fontDescription key="fontDescription" name="AvenirNext-Regular" family="Avenir Next" pointSize="17"/>
-                                                                    <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="0.54349801939999998" colorSpace="calibratedRGB"/>
+                                                                    <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="0.87" colorSpace="calibratedRGB"/>
                                                                     <nil key="highlightedColor"/>
                                                                 </label>
                                                             </subviews>
@@ -273,6 +276,7 @@
                                                     </constraints>
                                                 </view>
                                             </subviews>
+                                            <color key="backgroundColor" cocoaTouchSystemColor="groupTableViewBackgroundColor"/>
                                             <constraints>
                                                 <constraint firstAttribute="trailing" secondItem="5Dn-Wx-Bpw" secondAttribute="trailing" constant="8" id="WZ3-xU-FxK"/>
                                                 <constraint firstAttribute="bottom" secondItem="5Dn-Wx-Bpw" secondAttribute="bottom" constant="8" id="c3Q-7o-JvV"/>
@@ -280,6 +284,13 @@
                                                 <constraint firstItem="5Dn-Wx-Bpw" firstAttribute="top" secondItem="oZo-tM-ZK5" secondAttribute="top" constant="8" id="tJu-Co-hUz"/>
                                             </constraints>
                                         </tableViewCellContentView>
+                                        <connections>
+                                            <outlet property="caption" destination="Isd-1X-LRY" id="Df3-hb-nIi"/>
+                                            <outlet property="likesLbl" destination="Vvg-Te-ujn" id="Uqg-vx-L1D"/>
+                                            <outlet property="postImg" destination="xkQ-3j-PyG" id="zzn-JE-DtD"/>
+                                            <outlet property="profileImg" destination="iAP-Eg-cEv" id="NqL-HI-Ce2"/>
+                                            <outlet property="usernameLbl" destination="95Z-G3-mDN" id="rLC-8Z-cr9"/>
+                                        </connections>
                                     </tableViewCell>
                                 </prototypes>
                             </tableView>
@@ -295,9 +306,12 @@
                             <constraint firstItem="zpb-7b-etO" firstAttribute="leading" secondItem="uC6-Ae-UFB" secondAttribute="leadingMargin" id="cZg-Lm-had"/>
                             <constraint firstItem="MXh-mE-oBK" firstAttribute="top" secondItem="uC6-Ae-UFB" secondAttribute="top" id="eXx-yq-8V2"/>
                             <constraint firstItem="3PM-kl-fVW" firstAttribute="leading" secondItem="uC6-Ae-UFB" secondAttribute="leading" id="qfM-pg-ift"/>
-                            <constraint firstItem="3PM-kl-fVW" firstAttribute="top" secondItem="zpb-7b-etO" secondAttribute="bottom" constant="16" id="wp2-N5-nql"/>
+                            <constraint firstItem="3PM-kl-fVW" firstAttribute="top" secondItem="zpb-7b-etO" secondAttribute="bottom" constant="8" id="wp2-N5-nql"/>
                         </constraints>
                     </view>
+                    <connections>
+                        <outlet property="tableView" destination="3PM-kl-fVW" id="6pF-7F-FXe"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="t5a-Gk-DH6" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
