--- a/SocialNetworkDevSlo/Base.lproj/Main.storyboard
+++ b/SocialNetworkDevSlo/Base.lproj/Main.storyboard
@@ -175,12 +175,16 @@
                                 <subviews>
                                     <stackView opaque="NO" contentMode="scaleToFill" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="Mgx-Qf-N9I">
                                         <subviews>
-                                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="add-image" translatesAutoresizingMaskIntoConstraints="NO" id="3QI-8d-39H" customClass="CircleView" customModule="SocialNetworkDevSlo" customModuleProvider="target">
+                                            <imageView contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="add-image" translatesAutoresizingMaskIntoConstraints="NO" id="3QI-8d-39H" customClass="CircleView" customModule="SocialNetworkDevSlo" customModuleProvider="target">
                                                 <color key="backgroundColor" red="0.0" green="0.73725490199999999" blue="0.83137254900000002" alpha="1" colorSpace="calibratedRGB"/>
+                                                <gestureRecognizers/>
                                                 <constraints>
                                                     <constraint firstAttribute="height" constant="49" id="jIQ-ZD-rwh"/>
                                                     <constraint firstAttribute="width" constant="49" id="zxY-Nf-zg4"/>
                                                 </constraints>
+                                                <connections>
+                                                    <outletCollection property="gestureRecognizers" destination="5md-V9-p5L" appends="YES" id="ytQ-Zh-dL2"/>
+                                                </connections>
                                             </imageView>
                                             <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="What is on your mind?" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="L3j-Cj-Y4W" customClass="FancyField" customModule="SocialNetworkDevSlo" customModuleProvider="target">
                                                 <nil key="textColor"/>
@@ -314,6 +318,7 @@
                         </constraints>
                     </view>
                     <connections>
+                        <outlet property="imageAdd" destination="3QI-8d-39H" id="Ggr-az-hau"/>
                         <outlet property="tableView" destination="3PM-kl-fVW" id="6pF-7F-FXe"/>
                     </connections>
                 </viewController>
@@ -321,6 +326,11 @@
                 <tapGestureRecognizer id="qFe-yT-EFc">
                     <connections>
                         <action selector="signOutTapped:" destination="WXX-zf-M6Q" id="GVX-Nb-fXX"/>
+                    </connections>
+                </tapGestureRecognizer>
+                <tapGestureRecognizer id="5md-V9-p5L">
+                    <connections>
+                        <action selector="addImageTapped:" destination="WXX-zf-M6Q" id="30L-8s-Uh5"/>
                     </connections>
                 </tapGestureRecognizer>
             </objects>
